- Package strict route now requires minimum structural byte-size evidence for `.deb` beyond required AR entry names, preventing tiny synthetic placeholders from passing explicit package routing.
- Package strict route now requires non-ambiguous Debian required-entry cardinality, preventing duplicate required `.deb` structure entries from passing strict package routing.
- Package strict compressed-tar plugin route now requires non-ambiguous archive entry paths from plugin listing output, preventing duplicate-path ambiguity from passing explicit package archive routing.
- Package strict route now requires minimum structural byte-size evidence for `.exe` beyond valid PE header bytes, preventing tiny synthetic placeholders from passing explicit package routing.
- Package strict route now requires minimum structural byte-size evidence for `.msi` beyond valid CFB header bytes, preventing tiny synthetic placeholders from passing explicit package routing.
- Package strict route now requires minimum structural byte-size evidence for `.appimage` beyond valid runtime marker bytes, preventing tiny synthetic placeholders from passing explicit package routing.
- Package strict route now requires minimum structural byte-size evidence for `.rpm` beyond lead/header marker bytes, preventing tiny synthetic placeholders from passing explicit package routing.
- Package strict route now fails closed on partial ZIP/AR metadata even when required structure markers are present, preventing mixed valid/corrupt package acceptance.
- Package strict route now requires canonical ZIP marker paths for `.msix/.nupkg/.whl` structure checks, preventing nested lookalike marker paths from passing explicit package routing.
- Package strict route now requires unique required-marker cardinality for `.msix/.nupkg/.whl/.jar` ZIP structures, preventing duplicate/ambiguous required-marker sets from passing explicit package routing.