@@ -22,7 +22,7 @@ Adapter classes
   ARCHIVE_PLUGIN_REQUIRED
   ARCHIVE_PLUGIN_UNAVAILABLE
 - Route strictness:
-  explicit `--adapter archive` fails closed on invalid `.zip` signature bytes and invalid `.tar` structure/metadata (`ARCHIVE_FORMAT_MISMATCH`) rather than returning partial archive summaries. `.zip` strict mode validates central-directory integrity, rejects partial metadata even when some entries parsed, and requires non-ambiguous entry paths (duplicate or case-colliding entry paths fail strict routing). `.tar` strict mode validates header checksum and octal size fields, rejects partial metadata even when some entries parsed, and requires non-ambiguous entry paths (duplicate or case-colliding entry paths fail strict routing). Strict plugin archive routes (`.tgz/.tar.gz/.txz/.tar.xz/.7z`) also enforce non-ambiguous entry-path sets from plugin listing output.
+  explicit `--adapter archive` fails closed on invalid `.zip` signature bytes and invalid `.tar` structure/metadata (`ARCHIVE_FORMAT_MISMATCH`) rather than returning partial archive summaries. `.zip` strict mode validates central-directory integrity, rejects partial metadata even when some entries parsed, and requires non-ambiguous entry paths (duplicate or case-colliding entry paths fail strict routing). `.tar` strict mode validates header checksum and octal size fields, rejects partial metadata even when some entries parsed, and requires non-ambiguous entry paths (duplicate or case-colliding entry paths fail strict routing). Strict plugin archive routes (`.tgz/.tar.gz/.txz/.tar.xz/.7z`) also enforce non-ambiguous entry-path sets from plugin listing output (duplicate or case-colliding entry paths fail strict routing).
 
 2) package
 - Formats: .msi, .msix, .exe, .nupkg, .whl, .jar, .tar.gz/.tgz/.tar.xz/.txz, .deb, .rpm, .appimage, .pkg, .dmg
@@ -35,7 +35,7 @@ Adapter classes
   PACKAGE_SIGNING_INFO_UNAVAILABLE
   EXECUTION_WITHHELD_INSTALLER
 - Route strictness:
-  explicit `--adapter package` now fails closed when package/container evidence mismatches (for example invalid `.msi` CFB header structure, invalid `.exe` PE header, invalid ZIP-backed package containers, missing package-specific ZIP structure evidence for `.msix/.nupkg/.whl/.jar`, missing required Debian package entries for `.deb`, invalid `.rpm` lead/signature-header evidence, missing `.appimage` ELF/runtime marker evidence, or invalid `.pkg`/`.dmg` header-trailer evidence). Strict mode also rejects partial ZIP/AR metadata even when required package markers are present and requires canonical package-marker paths (nested lookalike marker paths do not satisfy strict package structure checks), including unique marker cardinality for strict ZIP structures (ambiguous duplicate required markers fail closed, including duplicate same-path marker entries detected from raw ZIP catalogs), non-ambiguous Debian required-entry cardinality (duplicate required `.deb` structure entries fail strict routing), and non-ambiguous compressed package-tar entry paths from plugin listing output. `.msix` strict mode requires Appx manifest plus `[Content_Types].xml` OPC structure evidence and a minimum structural file size, `.nupkg` and `.jar` strict mode requires package-specific ZIP structure plus a minimum structural file size, `.whl` strict mode requires `.dist-info` `METADATA`, `WHEEL`, and `RECORD` structure evidence, `.deb` strict mode requires required Debian package entries plus a minimum structural file size, `.exe` strict mode requires valid PE header structure plus a minimum structural file size, `.msi` strict mode requires valid CFB header structure fields plus a minimum structural file size, `.rpm` strict mode requires lead/header markers plus a minimum structural file size, `.appimage` strict mode requires ELF header plus AppImage runtime marker at canonical offset and a minimum structural file size, `.pkg` strict mode requires minimally valid XAR header fields and a minimum structural file size, and `.dmg` strict mode requires `koly` at canonical trailer offset (file-end minus 512) plus a minimum structural file size. Explicit compressed tar package formats (`.tgz/.tar.gz/.txz/.tar.xz`) now require `--enable-plugin tar` and fail closed when unavailable.
+  explicit `--adapter package` now fails closed when package/container evidence mismatches (for example invalid `.msi` CFB header structure, invalid `.exe` PE header, invalid ZIP-backed package containers, missing package-specific ZIP structure evidence for `.msix/.nupkg/.whl/.jar`, missing required Debian package entries for `.deb`, invalid `.rpm` lead/signature-header evidence, missing `.appimage` ELF/runtime marker evidence, or invalid `.pkg`/`.dmg` header-trailer evidence). Strict mode also rejects partial ZIP/AR metadata even when required package markers are present and requires canonical package-marker paths (nested lookalike marker paths do not satisfy strict package structure checks), including unique marker cardinality for strict ZIP structures (ambiguous duplicate required markers fail closed, including duplicate same-path marker entries detected from raw ZIP catalogs), non-ambiguous Debian required-entry cardinality (duplicate required `.deb` structure entries fail strict routing), and non-ambiguous compressed package-tar entry paths from plugin listing output (duplicate or case-colliding entry paths fail strict routing). `.msix` strict mode requires Appx manifest plus `[Content_Types].xml` OPC structure evidence and a minimum structural file size, `.nupkg` and `.jar` strict mode requires package-specific ZIP structure plus a minimum structural file size, `.whl` strict mode requires `.dist-info` `METADATA`, `WHEEL`, and `RECORD` structure evidence, `.deb` strict mode requires required Debian package entries plus a minimum structural file size, `.exe` strict mode requires valid PE header structure plus a minimum structural file size, `.msi` strict mode requires valid CFB header structure fields plus a minimum structural file size, `.rpm` strict mode requires lead/header markers plus a minimum structural file size, `.appimage` strict mode requires ELF header plus AppImage runtime marker at canonical offset and a minimum structural file size, `.pkg` strict mode requires minimally valid XAR header fields and a minimum structural file size, and `.dmg` strict mode requires `koly` at canonical trailer offset (file-end minus 512) plus a minimum structural file size. Explicit compressed tar package formats (`.tgz/.tar.gz/.txz/.tar.xz`) now require `--enable-plugin tar` and fail closed when unavailable.
 
 3) extension
 - Formats: .crx, .vsix, .xpi, unpacked extension folder with manifest.json
