@@ -38,7 +38,8 @@ Included
 - Package strict route now requires minimum structural byte-size evidence for `.msix` beyond manifest-only ZIP structure, preventing tiny synthetic placeholders from passing explicit package routing.
 - Package strict route now requires minimum structural byte-size evidence for `.deb` beyond required AR entry names, preventing tiny synthetic placeholders from passing explicit package routing.
 - Package strict route now requires non-ambiguous Debian required-entry cardinality, preventing duplicate required `.deb` structure entries from passing strict package routing.
-- Package strict compressed-tar plugin route now requires non-ambiguous archive entry paths from plugin listing output, preventing duplicate-path ambiguity from passing explicit package archive routing.
+- Package strict compressed-tar plugin route now requires non-ambiguous archive entry paths from plugin listing output, preventing duplicate or case-colliding path ambiguity from passing explicit package archive routing.
+- Package plugin applicability now includes package adapter routes, so `--enable-plugin tar` is accepted for compressed package tar formats and still fails closed as `ADAPTER_PLUGIN_UNUSED` on non-applicable package formats.
 - Package strict route now requires minimum structural byte-size evidence for `.exe` beyond valid PE header bytes, preventing tiny synthetic placeholders from passing explicit package routing.
 - Package strict route now requires minimum structural byte-size evidence for `.msi` beyond valid CFB header bytes, preventing tiny synthetic placeholders from passing explicit package routing.
 - Package strict route now requires minimum structural byte-size evidence for `.appimage` beyond valid runtime marker bytes, preventing tiny synthetic placeholders from passing explicit package routing.
@@ -52,7 +53,7 @@ Included
 - Explicit `.tar` archive analysis now validates header checksum and octal size fields and fails closed on partial metadata even when earlier entries parsed, preventing mixed valid/corrupt tar acceptance.
 - Explicit `.zip` archive analysis now validates central-directory integrity in strict route and fails closed on partial metadata even when earlier entries parsed, preventing mixed valid/corrupt ZIP acceptance.
 - Explicit `.zip` and `.tar` strict archive routes now require non-ambiguous entry paths, preventing duplicate or case-colliding entry-path ambiguity from passing strict archive routing.
-- Strict plugin archive routes (`.tgz/.tar.gz/.txz/.tar.xz/.7z`) now enforce non-ambiguous entry-path sets from plugin listing output, preventing duplicate-path ambiguity from passing explicit plugin-backed archive routing.
+- Strict plugin archive routes (`.tgz/.tar.gz/.txz/.tar.xz/.7z`) now enforce non-ambiguous entry-path sets from plugin listing output, preventing duplicate or case-colliding path ambiguity from passing explicit plugin-backed archive routing.
 - macOS installer coverage added to package adapter:
 - `.pkg` now captures deterministic XAR header and script/permission hint counters.
 - `.dmg` now captures deterministic trailer marker hints (`koly`) without mounting.
